testsuite/tests/grammar/invalid_lkt/annotated_grammar_2.lkt
from common import FooNode, Example
from lexer_example import foo_lexer

@with_lexer(foo_grammar) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
